@@ -14,26 +14,26 @@ $(document).ready(run());
 function run() {
 	
 	addEmote("http://i.imgur.com/NBEDt.png", "ajlie", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/5Tp73.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/oa0BJ.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/oaEI1BM.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/bEP8EQ2.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/mMp7L.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/HZlOi.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/7PYFy.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/DHDbq.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/8zRAx.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/aBIJ1.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/DmoWN.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/MdJgU.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/dVnqE.png", "Emote", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/5Tp73.png", "ajhappy", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/oa0BJ.png", "ajsup", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/oaEI1BM.png", "ajderp", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/bEP8EQ2.png", "ajgasp", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/mMp7L.png", "ajcower", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/HZlOi.png", "ajsly", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/7PYFy.png", "ajsquinty", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/DHDbq.png", "ajugh", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/8zRAx.png", "ajwut", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/aBIJ1.png", "ajfrown", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/DmoWN.png", "ajhmmm", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/MdJgU.png", "ajconfused", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/dVnqE.png", "ajcarefree", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/TAf9J.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/gNxjD.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/JmYib.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/aPZth.png", "Emote", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/gNxjD.png", "ajproud", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/JmYib.png", "ajmad", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/aPZth.png", "ajinnocent", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/4sZY1.png", "Emote", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/1NN8f.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/xmRQV.png", "Emote", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/xmRQV.png", "ajskeptical", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/lGb8P.png", "Emote", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/0zTKq.png", "Emote", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/BeQHk.png", "Emote", "AJ", "Applejack", 1);
